--- a/vignettes/PAC3.Rmd
+++ b/vignettes/PAC3.Rmd
@@ -365,8 +365,11 @@ gr2dna_seg_arr(transcripts$OKI2018.I69[11497331-11498497, 11498259-11511831], ) 
 
 
 
-#################
 ################
+################
+#PAC3 Figure
+
+
 PAC3 <- GRanges("chr1:11497331-11498497")
 
 coa$Oki_Osa |> subsetByOverlaps(PAC3)
@@ -382,6 +385,7 @@ extract_transcript_coords <- function(gr, gene_name, upstream=0, downstream=0) {
 }
 
 extract_transcript_coords()
+
 
 pac3_operon_oki <- extract_transcript_coords(transcripts$OKI2018.I69, 'g3146.t1', upstream=3, downstream=5)
 pac3_operon_osa <- extract_transcript_coords(transcripts$OSKA2016v1.9, 'g12442.t1', upstream=1, downstream=0)
@@ -430,7 +434,6 @@ operons$Bar <- calkOperons(transcripts$Bar2.p4, window=500)
 
 
 
-#hh <- as.vector(operons$Oki$tx_names)
 
 ss <- lapply(operons$Oki$tx_names,  function(x) 'g3146.t1' %in%  x)
 ss1 <- unlist(ss, recursive = T)
@@ -449,7 +452,8 @@ Find_UpAndDown <- function(op, gene_ofi) {
   yy
 }
 
-#This second part of the function doesnt work when g < 2
+
+#This second part of the function doesn't work when g < 2
   zz <- op$tx_names |> unlist ()
   Pc3 == gene_ofi
   gin <- which(Pc3 == gene_ofi)
@@ -459,8 +463,7 @@ Find_UpAndDown <- function(op, gene_ofi) {
   #Downstream genes
   cc <- Pc3[b > gin]
   list(bb, cc)
-  
-}
+  }
 
 
 
@@ -468,24 +471,11 @@ gg <- Find_UpAndDown(operons$Oki, 'g3146.t1')
 qq <- Find_UpAndDown(operons$Osa, 'g12442.t1')
 rr <- Find_UpAndDown(operons$Bar, 'g12642.t1')
 
-qq$tx_names
-
-
-#op - operons$Oki
-#gene_ofi 'g3146.t1'
-# Find_UpAndDown(operons$Oki, 'g3146.t1')
-#[1] "g3143.t1" "g3144.t1" "g3145.t1"
-#[1] "g3147.t1" "g3148.t1" "g3149.t1" "g3150.t1" "g3151.t1"
-
-#Find_UpAndDown(operons$Oki, 'g3146.t1')
-
-N19 <- OikScrambling::load_one_to_ones(system.file("extdata/OrthoFinder/N19")
-)
 
 
 
 
-  
+#Gene Ranges to dna_segs
 gr2dna_seg <- function (gr, gene_of_interest=NULL, ...) {
   # DNA segments need unique names
   if (length(gr) == 0) return(NULL)
@@ -516,59 +506,33 @@ dnaseg_to_annot <- function(ds, ...) {
 dnaseg_to_annot(tmp_dnaseg)
 
 
-
-
-addMargins <- function(regs, inner.margin, outer.margin){
-  regs <- extendRegions(regs, inner.margin, inner.margin)
-  regs[1] <- extendRegions(regs[1], extend.start = outer.margin -inner.margin)
-  regs[length(regs)] <- 
-    extendRegions(regs[length(regs)], extend.end = 
-                    outer.margin - inner.margin)
-  return(regs)
-}
-
-
 PAC3_in_Osa <- GRanges("XSR:3162950-3168025")
 
 
 plot_gene_map(
-#  apply_color_scheme(c(0.6, 0.4, 0.5), "grey"),
   dna_segs = list(
-    Okinawa_CHR1=gr2dna_seg(pac3_operon_oki, gene_of_interest='g3146.t1'),
-    Osaka_XSR=reverse(gr2dna_seg(pac3_operon_osa, gene_of_interest='g12442.t1')),
-    Barcelona_XSR=gr2dna_seg(pac3_operon_bar, gene_of_interest ='g12642.t1')
+    `Okinawa\nChr1: 11487473 - 11503891`=gr2dna_seg(pac3_operon_oki, gene_of_interest='g3146.t1'),
+    `Osaka\nXSR: 11487473 - 11503891`=reverse(gr2dna_seg(pac3_operon_osa, gene_of_interest='g12442.t1')),
+    `Barcelona\nXSR: 9802270 - 9808175`=gr2dna_seg(pac3_operon_bar, gene_of_interest ='g12642.t1')
   ),
   dna_seg_scale = T, 
   annotations = list(
-    dnaseg_to_annot(gr2dna_seg(pac3_operon_oki, gene_of_interest='g3146.t1'), rot=15, col=rainbow(9)),
-    reverse(dnaseg_to_annot(gr2dna_seg(pac3_operon_osa, gene_of_interest='g12442.t1'), rot=15, col=rainbow(2))),
-    dnaseg_to_annot(gr2dna_seg(pac3_operon_bar, gene_of_interest='g12642.t1'), rot=15, col=rainbow(2))
+    dnaseg_to_annot(gr2dna_seg(pac3_operon_oki, gene_of_interest='g3146.t1'), rot=0, col=gray.colors(9, start = 0.3, end =0.4)),
+    dnaseg_to_annot(reverse(gr2dna_seg(pac3_operon_osa, gene_of_interest='g12442.t1'), rot=0, col=gray.colors(2,  start = 0.4, end =0.4))),
+    dnaseg_to_annot(gr2dna_seg(pac3_operon_bar, gene_of_interest='g12642.t1'), rot=0, col=gray.colors(2,  start = 0.4, end =0.4))
   ),
   comparisons = list(
     reverse(gb2comp(coa$Oki_Osa |> subsetByOverlaps(PAC3)), side=2), 
     reverse(gb2comp(coa$Osa_Bar |> subsetByOverlaps(PAC3_in_Osa)), side=1)
   ),
-  main = "PAC3 moved from chr1 in Okinawa to XSR in Osaka")
- # par(mar=c(8,8,8,8))
+  annotation_height = 2.9, annotation_cex = 0.9,
+  main = "The PAC3 gene in operon is conserved between Osaka and Barcelona in XSR chromosome but on CHR1 in Okinawa")
 
 
 
 
-
-'''
-
-GenesOfInterest <- 
-
-
-
-gene_of_interest_in_x_species <- function(species_names, gene_list){
-  names_with_coords <- sapply(species_names, function(s) paste0(species_names, min(s$start), '-',   max(s$end))
-  dna_segs = list(
-    Okinawa=gr2dna_seg(pac3_operon_oki, gene_of_interest='g3146.t1'),
-    Osaka=gr2dna_seg(pac3_operon_osa, gene_of_interest='g12442.t1')
-  )
-}
-
+#Operon conservation algorithm
+N19 <- OikScrambling:::load_one_to_ones(system.file("extdata/OrthoFinder/N19.tsv", package="BreakpointsData"))
 
 
 
