--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -820,6 +820,12 @@ mean(Oki_Osa_scr_ratio_short_arm)
 t.test(Oki_Osa_scr_ratio_long_arm, Oki_Osa_scr_ratio_short_arm, paired = T)
 ```
 
+```{r quick_barplot}
+barplot(c(operons = 616 / 1281,
+        genes = 5294 / 17291,
+        exons = 16787 / 106811), main = "% overlaping a breakpoint region")
+```
+
 # Coverage
 
 _Needs coverage information to be recomputed_
